tests/multiubuntu/test-cases/TC_02/TC_02_egress_matchLabels_toPorts_multiplePorts.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-gxjdxaespfldovv
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-1
      group: group-1
  egress:
  - toEndpoints:
    - matchLabels:
        container: ubuntu-4
        group: group-2
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-zoatkjshozxqytv
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-1
      group: group-1
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-npnjhruljaxrqcq
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-4
      group: group-2
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-1
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
---
